add appointment fetch list logic
