# src/types/Appointment.ts
@@ -1,0 +1,9 @@
+export interface Appointment {
+    id: number;
+    patientId: number;
+    doctorId: number;
+    date: string;
+    time?: string;
+    type?: string;
+    status?: "pending" | "scheduled" | "completed" | "cancelled";
+}
